crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_097_Irem_TamSan_Kaiketsu_Yanchamaru_J.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-097-Irem-TamSan/Kaiketsu Yanchamaru (J) [!].nes
rom_sha256=238cb4c247187cf0ca1b77462a574b2495981307c9701725d8a111cb401d94d1
frames=1141
fb_bytes=245760
cycles=33949778
audio_samples=836505
audio_fnv1a64=57ee185266359195
checkpoint f900 fb_fnv1a64=8452e634a585c56a
checkpoint f1100 fb_fnv1a64=ce85f49fc9d52585
