crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_099_VsSystem_Balloon_Fight_VS.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-099-VsSystem/Balloon Fight (VS) [!].nes
rom_sha256=fda84d8dcde690b15acf8f11b27d613d571a65b2b34719c6e03e7f00e3b7096b
frames=1141
fb_bytes=245760
cycles=33949961
audio_samples=836509
audio_fnv1a64=15766b4c4a876f4f
checkpoint f900 fb_fnv1a64=b10170454c70a325
checkpoint f1100 fb_fnv1a64=b10170454c70a325
