crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_099_VsSystem_Tennis_VS.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-099-VsSystem/Tennis (VS) [!].nes
rom_sha256=52934e98167df47de52abc2c1f5653b53293ba667b91d2df2d582741f50a459c
frames=1141
fb_bytes=245760
cycles=33949961
audio_samples=836509
audio_fnv1a64=23861731035dd8c5
checkpoint f900 fb_fnv1a64=685b12114a576325
checkpoint f1100 fb_fnv1a64=685b12114a576325
