crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_105_NES_EVENT_Nintendo_World_Championships_1990_U.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-105-NES-EVENT/Nintendo World Championships 1990 (U) [!].nes
rom_sha256=83f66b806a69c41e341ee4d86d88808d0a22bc35c00fc9e63e291ee31bc50e1a
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=9b347ca7ed24b247
checkpoint f900 fb_fnv1a64=5c68f490556a5a72
checkpoint f1100 fb_fnv1a64=5c68f490556a5a72
