crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_107_MagicDragon_Magic_Dragon_EX_v100321_Unl.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-107-MagicDragon/Magic Dragon EX v100321 (Unl).nes
rom_sha256=c6588ea8018681ea4b2a2d08100c9a1227d028c61f6d679490329e3ed50a2f26
frames=1141
fb_bytes=245760
cycles=33949788
audio_samples=836505
audio_fnv1a64=e8824a116d5897d4
checkpoint f900 fb_fnv1a64=6dd4db412caaf8ec
checkpoint f1100 fb_fnv1a64=6dd4db412caaf8ec
