crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_107_MagicDragon_R_Type_Magic_Dragon_modification_1_1.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-107-MagicDragon/R-Type (Magic Dragon modification) (1.1).nes
rom_sha256=f274c945734ebb87cbdd42c67273f63bf2f6df258e4079c8694850a89b3d5be0
frames=1141
fb_bytes=245760
cycles=33949788
audio_samples=836505
audio_fnv1a64=e8824a116d5897d4
checkpoint f900 fb_fnv1a64=0d7a5d5b38b9e169
checkpoint f1100 fb_fnv1a64=0d7a5d5b38b9e169
